# python-package-template

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml
src/examplepackage/: __init__.py  source_file.py
tests/: test_imports.py
